# xraydb-rs

./: .gitignore  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE-xraydb.sqlite  README.md
.github/workflows/: ci-and-publish.yml
data/: xraydb.bin.zst
plans/: improvement-suggestions-claude.md  improvement-suggestions-codex.md
src/: build.rs
xraydb-data/: Cargo.toml
xraydb-data/src/: lib.rs
xraydb-generate/: Cargo.toml
xraydb-generate/src/: chantler.rs  elam.rs  main.rs  parsers.rs  waasmaier.rs
xraydb-lib/: Cargo.toml
xraydb-lib/benches/: lookup_bench.rs
xraydb-lib/src/: chantler.rs  chemparser.rs  compton.rs  constants.rs  core_widths.rs  coster_kronig.rs  db.rs  elam.rs  error.rs  interp.rs  ionchamber.rs  lib.rs  materials.rs  materials_db.rs  optics.rs  spline.rs  transitions.rs  waasmaier.rs
xraydb-lib/tests/: cross_section_tests.rs  element_tests.rs  material_tests.rs  optics_tests.rs  phase3_tests.rs
xraydb-wasm/: Cargo.toml
xraydb-wasm/src/: lib.rs
