[package]
name = "xraydb-generate"
version = "0.1.0"
edition = "2024"
authors = ["Ameyanagi <contact@ameyanagi.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
xraydb-data = { path = "../xraydb-data" }
postcard = { version = "1", features = ["alloc"] }
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
