[package]
name = "xraydb"
version = "0.1.0"
edition = "2024"
authors = ["Ameyanagi <contact@ameyanagi.com>"]
description = "X-ray reference data for the elements"
license = "MIT OR Apache-2.0"

[features]
optics = ["dep:num-complex"]

[dependencies]
xraydb-data = { path = "../xraydb-data" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
ruzstd = { version = "0.8" }
num-complex = { version = "0.4", optional = true }

[dev-dependencies]
approx = "0.5"
num-complex = "0.4"
criterion = "0.5"

[[bench]]
name = "lookup_bench"
harness = false
