[package]
name = "xraydb-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Ameyanagi <contact@ameyanagi.com>"]
description = "WASM bindings for XrayDB"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
xraydb = { path = "../xraydb-lib" }
wasm-bindgen = "0.2"
js-sys = "0.3"
